deploy/k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: orange-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: koussay0001/device-monitoring-backend:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: orange-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
